--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write \"**/*.+(js|jsx|json|yml|yaml|css|less|scss|ts|tsx|md|gql|graphql|mdx|vue)\""
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -15,9 +16,11 @@
     "@mantine/hooks": "^5.10.0",
     "@mantine/next": "^5.10.0",
     "@next/font": "13.1.2",
+    "@tabler/icons": "^1.119.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "clsx": "^1.2.1",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
     "next": "13.1.2",
@@ -28,6 +31,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "prettier": "2.7.1",
     "tailwindcss": "^3.2.4"
   }
 }
