--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "apexcharts": "^3.36.3",
     "clsx": "^1.2.1",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
     "next": "13.1.2",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.4",
     "zustand": "^4.3.2"
